--- a/app/src/main/res/layout/top_toll_bar.xml
+++ b/app/src/main/res/layout/top_toll_bar.xml
@@ -14,7 +14,7 @@
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_margin="8dp"
-        android:text="Movie Stack">
+        android:text="MovieZZ">
 
     </TextView>
 
