--- a/app/src/main/res/layout/activity_trending_person_list.xml
+++ b/app/src/main/res/layout/activity_trending_person_list.xml
@@ -16,7 +16,7 @@
             android:layout_margin="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Movie Stack"
+            android:text="MovieZZ"
             android:textColor="#fff"
             android:textStyle="bold"
             android:textSize="18dp">
