--- a/app/src/main/res/layout/trending_person_item_list_layout.xml
+++ b/app/src/main/res/layout/trending_person_item_list_layout.xml
@@ -8,14 +8,15 @@
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/circularimageview"
-        android:layout_width="60dp"
-        android:layout_height="60dp">
+        android:layout_width="70dp"
+        android:layout_height="70dp">
 
     </com.mikhaellopez.circularimageview.CircularImageView>
 
     <LinearLayout
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
