--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#05010C"
+    android:background="@color/primary"
     tools:context=".Activity.HomeActivity">
 
     <FrameLayout
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottomlayout"
         />
+
     <LinearLayout
         android:id="@+id/bottomlayout"
         android:layout_alignParentBottom="true"
