--- a/app/src/main/res/layout/activity_trending_person_list.xml
+++ b/app/src/main/res/layout/activity_trending_person_list.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#05010C"
+    android:background="@color/primary"
     tools:context=".Activity.TrendingPersonListActivity">
     <RelativeLayout
-        android:background="#000"
+        android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MovieZZ"
-            android:textColor="#fff"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18dp">
         </TextView>
