--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -15,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/poster_image_view"
                 android:layout_width="90dp"
                 android:layout_height="130dp">
