--- a/app/src/main/res/layout/top_toll_bar.xml
+++ b/app/src/main/res/layout/top_toll_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#000"
+    android:background="@color/black"
     android:layout_height="wrap_content">
 
     <TextView
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_margin="8dp"
