--- a/app/src/main/res/layout/trending_person_item_list_layout.xml
+++ b/app/src/main/res/layout/trending_person_item_list_layout.xml
@@ -2,11 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_margin="10dp"
+    android:background='@color/primary'
     android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <com.mikhaellopez.circularimageview.CircularImageView
+        android:scaleType="centerCrop"
         android:id="@+id/circularimageview"
         android:layout_width="70dp"
         android:layout_height="70dp">
@@ -41,8 +47,7 @@
             android:text="Proffesion">
 
         </TextView>
-
-
     </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
