--- a/app/src/main/res/layout/trending_person_layout.xml
+++ b/app/src/main/res/layout/trending_person_layout.xml
@@ -8,6 +8,7 @@
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/circular_image_view"
+        android:scaleType="centerCrop"
         android:layout_width="80dp"
         android:layout_height="80dp">
 
